--- a/public/index.html
+++ b/public/index.html
@@ -9,32 +9,40 @@
 </head>
 
 <body>
-  <header class="header">Socket.io demo</header>
+  <div class="container">
+    <header class="header">
+      <h1>Socket.io demo</h1>
+    </header>
 
-  <main class="main-container">
-    <form class="user-form">
-      <label for="username"></label>
-      <input name="username" type="text" class="username" placeholder="enter username...">
-      <button type="submit">Enter Chat</button>
-    </form>
-    <div class="chat-container">
-      <div class="chat-sidebar">
-        <h3>Users</h3>
-        <ul id="userList">
-        </ul>
+    <main class="main-container">
+      <form class="user-form">
+        <label for="username"></label>
+        <input name="username" type="text" class="username" placeholder="enter username...">
+        <button class="username-submit" type="submit">Enter Chat</button>
+      </form>
+      <div class="chat-container">
+        <div class="chat-sidebar">
+          <h3>Users</h3>
+          <ul id="userList">
+          </ul>
+          <div class="border"></div>
+        </div>
+        <div class="chat-messages-container">
+          <div class="chat-messages"></div>
+
+          <form class="chat-form">
+            <input name="chatInput" class="chat-input" placeholder="Type Something...">
+            <button class="chat-submit" type="submit">Send</button>
+          </form>
+        </div>
       </div>
-      <div class="chat-messages"></div>
-    </div>
-    <form class="chat-form">
-      <input name="chatInput" class="chat-input">
-      <button class="chat-submit" type="submit">Send</button>
-    </form>
-  </main>
+    </main>
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.4/qs.min.js"
     integrity="sha512-BHtomM5XDcUy7tDNcrcX1Eh0RogdWiMdXl3wJcKB3PFekXb3l5aDzymaTher61u6vEZySnoC/SAj2Y/p918Y3w=="
     crossorigin="anonymous"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="main.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
