--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,11 @@
       <div class="chat-container">
         <div class="chat-sidebar">
           <h3>Users</h3>
+          <p>Active Users</p>
           <ul id="userList">
+          </ul>
+          <p>Offline users</p>
+          <ul id="offlineUserList">
           </ul>
           <div class="border"></div>
         </div>
